--- a/2_data_eda.ipynb
+++ b/2_data_eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,11 +14,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('glassdoor_jobs_cleaned.csv')"
+    "path = 'C:/Users/tigra/Desktop/ds_salary_proj/assets/'\n",
+    "df = pd.read_csv(f\"{path}glassdoor_jobs_cleaned.csv\")"
    ]
   },
   {
@@ -374,13 +375,6 @@
     "pd.set_option('display.max_columns', None)\n",
     "df.head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
