--- a/3_data_modeling.ipynb
+++ b/3_data_modeling.ipynb
@@ -238,19 +238,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestRegressor(max_features='log2', n_estimators=270)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# # tune models GridsearchCV \n",
     "from sklearn.model_selection import GridSearchCV\n",
     "parameters = {'n_estimators':range(10,300,10), 'criterion':('mse','mae'), 'max_features':('auto','sqrt','log2')}\n",
     "\n",
     "gs = GridSearchCV(rf,parameters,scoring='neg_mean_absolute_error',cv=3)\n",
-    "gs.fit(X_train,y_train)\n",
-    "\n",
-    "gs.best_score_\n",
-    "gs.best_estimator_"
+    "gs.fit(X_train,y_train)"
    ]
   },
   {
@@ -261,6 +269,25 @@
     "- How do I use the results of GridsearchCV?\n",
     "- How do I select the features in a better way?\n",
     "- Forward propagation?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-6.969678935772673\n",
+      "RandomForestRegressor(max_features='log2', n_estimators=270)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(gs.best_score_)\n",
+    "print(gs.best_estimator_)"
    ]
   },
   {
